# wintab

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RESEARCH.md  build.rs  config.sample.yaml  justfile  wintab.manifest
.claude/rules/: debugging.md  features.md  testing.md
backlog/: MVP_PLAN.md  about-dialog.md  auto-hide-tabs.md  automatic-groups.md  check-for-updates.md  config-ui.md  drag-file-over-tab.md  hide-tabs-desktop-switch.md  implementation-gaps.md  keyboard-shortcuts.md  middle-click-close.md  move-tab-between-groups.md  new-tab-button.md  new-tab-from-running.md  peek-zorder-awareness.md  prevent-hidden-tabs.md  preview-on-hover.md  remember-position-size.md  reset-to-defaults.md  show-full-title-on-hover.md  spec.md  start-with-windows.md  sub-group-coloring.md  tab-close-button.md  tab-coloring.md  tab-context-menu.md  tab-position-config.md  tab-renaming.md  tab-reordering.md  tasks.md  tray-icon-click.md  whitelist-blacklist.md  window-picker-tool.md
backlog/mockups/: sub-group-coloring.html
scripts/: e2e-report.sh
src/: acceptance.rs  appdata.rs  config.rs  drag.rs  group.rs  hook.rs  main.rs  overlay.rs  position_store.rs  preview.rs  screenshot.rs  state.rs  tray.rs  vdesktop.rs  watcher.rs  window.rs
