[package]
name = "wintab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wintab"
path = "src/main.rs"

[[bin]]
name = "dummy_window"
path = "src/bin/dummy_window.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
]

[dev-dependencies]
image = "0.25"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
